--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: ''
 description: ''
 keywords:
 author: GaoHeming
-language: en
+language: zh-CN
 timezone: ''
 
 # URL
@@ -61,6 +61,7 @@ prismjs:
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
+# 分页相关
 index_generator:
   path: ''
   per_page: 10
@@ -98,7 +99,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: TKL
+theme: fluid
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
