--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -385,18 +385,16 @@ tag:
 # About Page
 #---------------------------
 about:  # 关于页需要手动创建，具体请见：https://hexo.fluid-dev.com/docs/guide/#%E5%85%B3%E4%BA%8E%E9%A1%B5
-  banner_img: /img/default.png
+  banner_img: /img/banner4.jpg
   banner_img_height: 60  # available: 0 - 100
   banner_mask_alpha: 0.3  # available: 0 - 1.0
-  subtitle:  # 打字机内容
+  subtitle:  About Me # 打字机内容
   avatar: /img/avatar.png # 头像
-  name: myname
-  introduce: '一句简短的介绍' # 支持 HTML
+  name: 高赫明
+  introduce: '每个不曾起舞的日子，都是对生命的辜负 ✌️' # 支持 HTML
   icons: # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，class 代表图标的 css class
-    - { class: 'iconfont icon-github-fill', link: 'https://github.com', tip: 'GitHub' }
-    - { class: 'iconfont icon-douban-fill', link: 'https://douban.com', tip: '豆瓣' }
-    - { class: 'iconfont icon-wechat-fill', qrcode: '/img/logo.png' }  # 添加 qrcode 后，点击不再跳转，而是悬浮二维码，需要指定 image
-
+    - { class: 'iconfont icon-github-fill', link: 'https://github.com/drawKing', tip: 'GitHub' }
+    - { class: 'iconfont icon-wechat-fill', qrcode: '/img/qrCode.jpg'}  # 添加 qrcode 后，点击不再跳转，而是悬浮二维码，需要指定 image
 
 #---------------------------
 # 404页
