--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -169,8 +169,8 @@ footer:
   beian:  # The footer of China's website policy, other areas keep disable
     enable: true
     icp_text: 冀ICP备18021265号 # ICP证号
-    police_text:  # 公安备案号，不填则只显示ICP
-    police_code: 12345678 # 公安备案的编号，用于URL跳转查询
+    police_text:  11010702002064号 # 公安备案号，不填则只显示ICP
+    police_code: 11010702002064 # 公安备案的编号，用于URL跳转查询
     police_icon: /img/police_beian.png # 公安备案的图片. 为空时不显示备案图片
 
 scroll_top_arrow:  # 向顶部滚动的箭头
